--- a/client/page8.html
+++ b/client/page8.html
@@ -1,4 +1,8 @@
 <h4>CSS animation</h4>
-<code>
-	
+<code>animation-delay: .5s;
+animation-duration: 2s;
+animation-direction: reverse;
+animation-iteration-count: 6;
+animation-timing-function: ease-out;
+animation-name: myAnimation;
 </code>
